app/static/css/projects.css
body {margin: 0;
    background-color: rgb(255, 255, 255);
    font-family: Arial, sans-serif; }

.nav_bar {display: flex;
    justify-content: space-between;
    align-items: center;

    padding: 15px 25px;

    background-color: rgb(98, 113, 172);
    border-bottom: 5px solid black;
}

/* BlockyTest*/
.logo_text {
    margin: 0;
    font-size: 67px;
    color: rgb(0, 0, 0);}

/* Wailsalutem foto*/
.header_logo {
    width: 180px;
    height: auto;}

/* de box met card erin en de naam 'projecten' */

main {
    width: 85%;
    margin: 60px auto;
    }

/* projecten box randje) */
.projects_box {
    border: 2px solid rgb(0, 0, 0);
    padding: 40px;
    min-height: 350px;
    box-sizing: border-box;}

/* HEADER IN DE BOX (titel + plus) */

.projects_header {
    display: flex;
    align-items: center;
    padding-bottom: 15px;
    margin-bottom: 25px;
    border-bottom: 2px solid rgb(0, 0, 0);
}

.projects_header h2 {
    margin: 0;
    font-size: 67px;
    color: rgb(0, 0, 0);
}

/* duwt de plus knop naar rechts */
.add_button {
    margin-left: auto;
    width: 55px;
    height: 55px;
    border: 2px solid rgb(0, 0, 0);
    color: rgb(0, 0, 0);
    text-decoration: none;
    font-size: 36px;
    font-weight: bold;
    display: flex;
    justify-content: center;
    align-items: center;
    box-sizing: border-box;
}

/* tekst in de kaart */
.grid {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    color: rgb(0, 0, 0);
}

/* lijn om de card heen op projectenpagina */
.card {
    width: 200px;
    min-height: 140px;
    padding: 12px;
    border: 2px solid rgb(0, 0, 0);
    display: flex;
    flex-direction: column;
    gap: 8px;
    box-sizing: border-box;
}

/* Tekst in cards op projectenpagina */

.project_name {
    margin: 0;
    font-size: 28px;
    font-weight: bold;
    text-align: center;
    line-height: 1.3;
    word-break: break-word;
}

.project_description {
    margin: 0;
    font-size: 20px;
    text-align: center;
    line-height: 1.4;
    word-break: break-word;
}

/* Add pagina */

.form_page {
    width: 70%;
    margin: 60px auto;
}

/* box op add pagina */

.form_box {
    border: 2px solid rgb(0, 0, 0);
    padding: 30px;
    box-sizing: border-box;
}

.form_title {
    margin: 0 0 30px 0;
    font-size: 32px;
    color: rgb(0, 0, 0);
}

/* LABELS */

label {
    display: block;
    margin-bottom: 8px;
    font-size: 20px;
}

/* Input velden */

input[type="text"],
textarea {
    width: 100%;
    font-size: 16px;
    padding: 14px;
    margin-bottom: 20px;
    border: none;
    box-sizing: border-box;
    background-color:#c1c2eb;
;
}

textarea {
    min-height: 140px;
    resize: vertical;
}

/* knoppen */

.form_buttons {
    display: flex;
    gap: 12px;
    margin-top: 10px;
}

button,
.go_back {
    padding: 10px 18px;
    font-size: 16px;
    background-color: rgb(255, 255, 255);
    color: rgb(0, 0, 0);
    text-decoration: none;
    border: none;
    cursor: pointer;
    
}

